Convert author objects to plain ol' strings

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
 
             <h3>
                 <a class="post-summary__link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+                <p>{{ post.excerpt }}</p>
             </h3>
         </article>
 
