Tidy up index page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 
 <header class="page-header page-header--no-image">
     <div class="container">
-        <h1 class="page-header__title">Posts</h1>
+        <h1 class="page-header__title">Blog</h1>
+        <p class="site-description">{{ site.description }}</p>
     </div>
 </header>
 
