Refactor header includes for better code reuse

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% assign title = 'Blog' %}
-{% include page-header.html %}
+{% include index-page-header.html %}
 
 <section class="posts-index">
 
