Looking a bit better now

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ layout: default
     {% if paginator.total_pages > 1 %}
         <div>
             {% if paginator.next_page %}
-                <a class="btn" href="{{ paginator.next_page_path | prepend: site.baseurl }}">&#8592; Older Posts</a>
+                <a class="btn p-3" href="{{ paginator.next_page_path | prepend: site.baseurl }}">&#8592; Older Posts</a>
             {% endif %}
 
             {% if paginator.previous_page %}
-                <a class="btn" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '/index.html', '/' }}">Newer Posts &#8594;</a>
+                <a class="btn p-3" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '/index.html', '/' }}">Newer Posts &#8594;</a>
             {% endif %}
         </div>
     {% endif %}
