--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include index-page-header.html %}
 
-<section class="c">
+<section class="wrap">
     {% for post in paginator.posts %}
         {% include post-summary.html %}
     {% endfor %}
