Redesign / front-end rebuild (#20)
* wowee here we go

* Looking a bit better now

* Nearly there

* Nearly ready I think

* Prepare for the progressive option on jekyll-responsive-images

* Fix stylesheet compilation

* Fix post ad insertion

* Move pygments CSS directly into highlight.css

* Remove unused print styles

* Reorder component imports

* Fix blockquote styling

* Fix collection pages

* Upgrade to Elm 0.18

* Trim CSS down even further

* Fix featured image aspect ratio at small screen sizes

* Increase space between heading and hav

* Reduce font size on smaller screens

--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@ layout: default
 
 {% include index-page-header.html %}
 
-<section class="posts-index">
-
+<section class="wrap">
     {% for post in paginator.posts %}
         {% include post-summary.html %}
     {% endfor %}
 
     {% if paginator.total_pages > 1 %}
-        <div class="pagination">
+        <div>
             {% if paginator.next_page %}
-                <a class="pagination__link pagination__link--next" href="{{ paginator.next_page_path | prepend: site.baseurl }}">&#8592; Older Posts</a>
+                <a class="btn p-3" href="{{ paginator.next_page_path | prepend: site.baseurl }}">&#8592; Older Posts</a>
             {% endif %}
 
             {% if paginator.previous_page %}
-                <a class="pagination__link pagination__link--previous" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '/index.html', '/' }}">Newer Posts &#8594;</a>
+                <a class="btn p-3" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '/index.html', '/' }}">Newer Posts &#8594;</a>
             {% endif %}
         </div>
     {% endif %}
-
 </section>
